samples/_failures_safe/1761292409_4941a1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2c9c95ac.c: In function ‘main’:
./samples/SAFE/__tmp_2c9c95ac.c:161:5: error: expected expression at end of input
  161 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_2c9c95ac.c:161:5: error: expected declaration or statement at end of input
